refactor: enhance documentation

--- a/index.html
+++ b/index.html
@@ -2,9 +2,84 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
+		<title>Cozy Chaos</title>
+		<meta name="description" content="Don’t Disturb! (But Do!)" />
+		<meta name="summary" content="Don’t Disturb! (But Do!)" />
+		<meta name="subject" content="Cozy Chaos" />
+		<meta name="language" content="en" />
+		<meta name="copyright" content="Cozy Chaos" />
+		<meta name="author" content="Cozy Chaos, neodarksoulink@gmail.com" />
+		<meta name="reply-to" content="neodarksoulink@gmail.com" />
+
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+		/>
+		<meta name="robots" content="index, follow" />
+		<meta name="application-name" content="Cozy Chaos" />
+		<meta name="format-detection" content="telephone=no" />
+		<meta name="x-ua-compatible" content="IE=edge" />
+		<meta name="MobileOptimized" content="320" />
+
+		<link rel="manifest" href="/site.webmanifest" />
 		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>cozy-chaos</title>
+
+		<meta name="googlebot" content="index, follow" />
+		<meta
+			name="google-site-verification"
+			content="google-site-verification=google-site-verification"
+		/>
+		<meta name="google-site-verification" content="google-site-verification" />
+		<meta name="google-site-verification" content="google-site-verification" />
+
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
+		<meta
+			name="apple-mobile-web-app-title"
+			content="Cozy Chaos: Don’t Disturb! (But Do!)"
+		/>
+
+		<meta name="mobile-web-app-capable" content="yes" />
+		<meta
+			name="mobile-web-app-title"
+			content="Cozy Chaos: Don’t Disturb! (But Do!)"
+		/>
+
+		<meta name="msapplication-TileImage" content="/thumbnail.png" />
+		<meta name="msapplication-tap-highlight" content="no" />
+		<meta name="msapplication-starturl" content="/" />
+		<meta
+			name="msapplication-tooltip"
+			content="Cozy Chaos: Don’t Disturb! (But Do!)"
+		/>
+		<meta
+			name="msapplication-window"
+			content="width=device-width, initial-scale=1.0"
+		/>
+		<meta
+			name="msapplication-task"
+			content="name=Cozy Chaos;action-uri=/;icon-uri=/thumbnail.png"
+		/>
+		<meta
+			name="msapplication-task"
+			content="name=Cozy Chaos;action-uri=/;icon-uri=/thumbnail.png"
+		/>
+
+		<meta name="og:site_name" content="Cozy Chaos" />
+		<meta name="og:type" content="website" />
+		<meta name="og:title" content="Cozy Chaos: Don’t Disturb! (But Do!)" />
+		<meta name="og:description" content="Don’t Disturb! (But Do!)" />
+		<meta name="og:image" content="/thumbnail.png" />
+
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:title" content="Cozy Chaos: Don’t Disturb! (But Do!)" />
+		<meta name="twitter:creator" content="https://x.com/nsl_nathan" />
+		<meta name="twitter:image" content="/thumbnail.png" />
+		<meta name="twitter:description" content="Don’t Disturb! (But Do!)" />
+
+		<script id="unhead:payload" type="application/json">
+			{ "title": "Cozy Chaos: Don’t Disturb! (But Do!)" }
+		</script>
 	</head>
 	<body>
 		<script type="module" src="/src/main.ts"></script>
