--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<meta name="MobileOptimized" content="320" />
 
 		<link rel="manifest" href="/site.webmanifest" />
-		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
+		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 
 		<meta name="googlebot" content="index, follow" />
 		<meta
